<resources>
    <string name="app_name">Cà bouge à...</string>
    <string name="app_name_short">Cà bouge à</string>

    <string name="activity_events">Événements</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="icttl_nav_events">Événements</string>
    <string name="icttl_nav_lieux">Lieux</string>
    <string name="icttl_nav_fav">Favoris</string>

    <string name="icttl_nav_user_events">Mes événements</string>
    <string name="icttl_nav_user_lieux">Mes lieux</string>
    <string name="icttl_nav_user_fav">Mes favoris</string>
    <string name="icttl_nav_user_profil">Mon profil</string>
<!--
    <string name="ttl_bar_events">Événements</string>
    <string name="ttl_bar_lieux">Lieux</string>
    <string name="ttl_bar_favoris">Favoris</string>
  -->
    <string name="icttl_nav_share">Partager l\'application</string>

    <string name="menu_group_all">Données générales</string><!-- Pas utilisé -->
    <string name="menu_group_custom">Données personelles</string>
    <string name="menu_group_communication">Communication</string>

    <string name="toast_con_int_OK">Connection Internet</string>
    <string name="toast_con_int_NOK">Pas de connection Internet !</string>
    <string name="toast_con_int_AccessError">\nVérifier vos autorisations auprès de votre provider...</string>
    <string name="title_activity_afficher_events">Afficher_events</string>

    <!-- TODO: Vérifier ces textes dans les fragments, supprimer si nécessaire -->
    <string name="hello_fragment_events">Fragment liste events</string>
    <string name="hello_fragment_lieux">Fragment liste lieux</string>
</resources>
