<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_local_activity"
            android:title="@string/icttl_nav_events" />
        <item
            android:id="@+id/nav_lieux"
            android:icon="@drawable/ic_menu_location_city"
            android:title="@string/icttl_nav_lieux" />
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_menu_favorite"
            android:title="@string/icttl_nav_fav" />
    </group>
    <!-- /group était ici -->
    <item android:title="@string/menu_group_custom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_user_events"
                    android:icon="@drawable/ic_menu_local_activity"
                    android:title="@string/icttl_nav_user_events" />
                <item
                    android:id="@+id/nav_user_lieux"
                    android:icon="@drawable/ic_menu_location_city"
                    android:title="@string/icttl_nav_user_lieux" />
                <item
                    android:id="@+id/nav_user_fav"
                    android:icon="@drawable/ic_menu_favorite"
                    android:title="@string/icttl_nav_user_fav" />

                <item
                    android:id="@+id/nav_user_profil"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/icttl_nav_user_profil" />
            </group>
        </menu>
    </item>

    <item android:title="@string/menu_group_communication">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/icttl_nav_share" />
            </group>
        </menu>
    </item>
</menu>
